@@ -2,10 +2,11 @@ TbaMUD is currently being developed by The Builder Academy. If you need any
 help, find any bugs, or have ideas for improvement please stop by TBA at 
 telnet://tbamud.com:9091 or email rumble@tbamud.com --Rumble
 @
+[Apr 10 2013] - Fizban
+  Fixed wiznet so it is viewable in OLC again.
 [Apr 09 2013] - Rumble
   Fixed warning in genzon.c checking bottom_of_zone. (Thanks Fizban)
 [Apr 08 2013] - Rumble
-  Fixed wizlist so it is viewable in OLC again. (Thanks Silvaria)
   Fixed color bleeding in level range menu. (Thanks Silvaria)
   Fixed typos, updated help.
 [Apr 03 2013] - Rumble
